<?xml version="1.0"?>
<package format="3">
  <name>m20_sdk_deploy</name>
  <version>1.4.1</version>
  <description>RL deploy</description>
  <maintainer email="pengbo@deeprobotics.cn">Bo (Percy) Peng</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>drdds</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
